[package]
edition = "2021"
name = "contract"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = {version = "1.0.0-beta8", features = ["staking"]}
cw-storage-plus = "0.13.4"
serde = {version = "1.0.103", default-features = false, features = ["derive"]}

[dev-dependencies]
cw-multi-test = "0.13.4"
